<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeDynamic"
    android:background="#FAF6E8">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:id="@+id/LLRecipeDynamic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"

            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/Respimage"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/circleImageView"

                />

            <TextView
                android:id="@+id/text_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text111"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="18dp"
                android:textSize="20sp"
                android:text="@string/text_ingredients"
                />

            <TextView
                android:id="@+id/Method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text111"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Text_Ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="18dp"
                android:textSize="20sp"
                android:text="@string/text_ingredients"
                />

            <CheckBox
                android:id="@+id/approveCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="150dp"
                android:checked="false"
                android:cursorVisible="false"
                android:text="@string/approving"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="150dp"
                android:checked="false"
                android:cursorVisible="false"
                android:text="@string/recommend"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>




    </androidx.core.widget.NestedScrollView>

</LinearLayout>