<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF6E8"
    tools:context=".send_notification">

    <RelativeLayout
        android:id="@+id/Rl"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/HomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="NotSibling">


        <TextView
            android:id="@+id/HomeBtn"
            android:layout_width="437dp"
            android:layout_height="55dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="37dp"
            android:clickable="false"
            android:fontFamily="@font/coustard_black"
            android:shadowColor="#000000"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:text="@string/LOGO"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/prime_color"
            android:textSize="40dp"
            android:textStyle="bold|italic"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            android:onClick="HomeBtnClick"/>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/LLRecipeDynamic"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:padding="10dp"

        app:layout_constraintBottom_toTopOf="@+id/RLBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rl"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="שליחת התראה לכלל הלקוחות"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:hint="כותרת ההתראה"
            app:boxBackgroundColor="@color/browser_actions_bg_grey"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:counterTextColor="@color/black"
            app:hintTextColor="@color/black"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TxtTitlenotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:hint="תוכן ההתראה"
            android:keyboardNavigationCluster="true"
            app:boxBackgroundColor="@color/browser_actions_bg_grey"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:counterTextColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtmessnotify"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/RLBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="80dp">



        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_notify_btn_Custom"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/Text_custom_send_notify"
            android:textColor="#FBEFD2"
            android:textStyle="bold"
            app:backgroundTint="@color/prime_color"
            app:cornerRadius="20dp"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_notify_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/Text_auto_notify_send"
            android:textColor="#FBEFD2"
            android:textStyle="bold"
            app:backgroundTint="@color/prime_color"
            app:cornerRadius="20dp"
            />
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>